--- a/src/MainPage/index.css
+++ b/src/MainPage/index.css
@@ -324,7 +324,7 @@ body::-webkit-scrollbar-thumb {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ffffffc6;
+    background-color: #405189c6;
     /* Adjust the opacity/fade as needed */
     z-index: -1;
 }
@@ -332,7 +332,7 @@ body::-webkit-scrollbar-thumb {
 
 .lds-spinner {
     color: official;
-    display: inline-block;
+    display: block;
     position: relative;
     /* width: 80px; */
     /* height: 80px; */
@@ -352,7 +352,7 @@ body::-webkit-scrollbar-thumb {
     width: 6px;
     height: 18px;
     border-radius: 20%;
-    background: #fff;
+    background: #405189;
 }
 
 /* #405189 */
