--- a/src/initialpage/login.css
+++ b/src/initialpage/login.css
@@ -21,6 +21,11 @@
     /* Optional: Adjust the position if needed */
 }
 
+.logo-login {
+    width: 12.5rem;
+    height: 6rem;
+}
+
 .login-form {
     max-width: 550px;
     margin: 0 auto;
